# nikdor.xyz

./: .gitignore  README.md  about.html  achievements.html  index.html  projects.html  script.js  services.html  skills.html  style.css
about/: index.html
achievements/: index.html
backend/: Cargo.toml  build.gradle  docker-compose.yml
backend/migrations/: 001_create_orders.sql
backend/src/: bot.rs  db.rs  dto.rs  error.rs  handlers.rs  main.rs  model.rs
backend/src/main/java/xyz/nikdor/backend/: BackendApplication.java
backend/src/main/resources/: application.properties
backend/src/test/java/xyz/nikdor/backend/: BackendApplicationTests.java
frontend/: index.html
frontend/about/: index.html
frontend/achievements/: index.html
frontend/assets/css/: style.css
frontend/assets/js/: order.js
frontend/projects/: index.html
frontend/public/: about.html  achievements.html  index.html  projects.html  services.html  skills.html
frontend/public/data/: projects.json  services.json
frontend/public/scripts/: order.js  projects.js  services.js
frontend/public/styles/: about.css  achievements.css  base.css  home.css  projects.css  services.css  skills.css
frontend/services/: index.html
frontend/skills/: index.html
projects/: index.html
services/: index.html
skills/: index.html
