[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenv = "0.15.0"
tower = "0.5.3"
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
pretty_env_logger = "0.5.0"

[dev-dependencies]
http-body-util = "0.1"
